controller/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prism-backend
  namespace: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prism-backend
  template:
    metadata:
      labels:
        app: prism-backend
    spec:
      containers:
        - name: prism-backend
          image: suggiss/prism-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
