controller/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller
  labels:
    app: controller
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: controller
